Return number of airports by timezone

--- a/sql.ipynb
+++ b/sql.ipynb
@@ -1215,13 +1215,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timezone</th>\n",
+       "      <th>numOfAirports</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Africa/Abidjan</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Africa/Accra</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Africa/Addis_Ababa</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Africa/Algiers</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Africa/Asmera</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>Pacific/Tongatapu</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>Pacific/Truk</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291</th>\n",
+       "      <td>Pacific/Wake</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>Pacific/Wallis</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>\\N</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>294 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               timezone  numOfAirports\n",
+       "0        Africa/Abidjan              7\n",
+       "1          Africa/Accra              6\n",
+       "2    Africa/Addis_Ababa             31\n",
+       "3        Africa/Algiers             44\n",
+       "4         Africa/Asmera              4\n",
+       "..                  ...            ...\n",
+       "289   Pacific/Tongatapu              6\n",
+       "290        Pacific/Truk              3\n",
+       "291        Pacific/Wake              1\n",
+       "292      Pacific/Wallis              2\n",
+       "293                  \\N             92\n",
+       "\n",
+       "[294 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "pd.read_sql(\"\"\"\n",
+    "SELECT \n",
+    "    timezone, COUNT(*) AS numOfAirports\n",
+    "FROM \n",
+    "    airports\n",
+    "GROUP BY \n",
+    "    timeZone\n",
+    "\n",
+    "\"\"\", conn)"
    ]
   },
   {
